--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,97 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    background-image: linear-gradient(75deg, purple 70%, orange 70%);
+    color: white;
+font-size: 25px;
+}
+
+.button{
+    width:100px;
+    height: 50px;
+    background: white;
+    border-radius: 25px;
+    position: relative;
+}
+
+.book-placeholder{
+    width:95%;
+    border:solid 5px;
+    border-image: linear-gradient(45deg, purple, orange) 1;
+    border-radius: 25px;
+    padding:8px;
+    margin: auto;
+    display:inline-block;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+}
+
+.book-wrapper{
+    width:50%;
+    border:solid 5px;
+    border-image: linear-gradient(45deg, purple, orange) 1;
+    border-radius: 25px;
+    padding:8px;
+    margin: auto;
+    display:inline-block;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+}
+
+.Error{
+    color:red;
+    font-weight: bold;
+}
+
+.charLimit{
+    display: inline-block;
+clear: both;
+    width : 10%;
+    height: 10%;
+    text-align: center;
+    padding: 5px;
+    color: black;
+    border-radius: 25px;
+}
+
+    .item{
+        padding: 10px;
+display: inline-block;
+block-size: auto;
+position: relative;
+width: 50%;
+        border: 5px white;
+        border-style:ridge;
+        border-radius: 25px;
+    }
+
+    .textarea{
+        resize: none;
+        height: 200px;
+        border-radius: 10px;
+        width: 200px;
+    }
+
+    .ratingarea{
+        resize: none;
+        height: 20px;
+        border-radius: 10px;
+        width: 40px;
+       text-align: center;
+    }
+    
+    hr {
+        border: none;
+        height: 5px;
+        background-image: linear-gradient(45deg, purple, orange);
+        margin: 20px 0;
+        border-radius: 25px;
+    }
+
+    input{
+        margin: 5px;
+        height: 35px;
+        width: 200px;
+        border-radius: 25px;
+    }
